--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vuelidate/core": "^2.0.0-alpha.40",
+    "@vuelidate/validators": "^2.0.0-alpha.28",
+    "axios": "^0.26.1",
     "core-js": "^3.6.5",
+    "js-cookie": "^3.0.1",
     "vue": "^2.6.11",
-    "vue-router": "^3.2.0",
+    "vue-router": "^3.0.6",
+    "vuelidate": "^0.7.7",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
@@ -24,7 +29,10 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^6.2.2",
+    "node-sass": "^7.0.1",
     "prettier": "^2.2.1",
+    "sass": "^1.49.11",
+    "sass-loader": "^7.3.1",
     "style-resources-loader": "^1.5.0",
     "vue-template-compiler": "^2.6.11"
   }
