--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "start": "node server.js"
   },
   "dependencies": {
     "@vuelidate/core": "^2.0.0-alpha.40",
     "@vuelidate/validators": "^2.0.0-alpha.28",
     "axios": "^0.26.1",
     "core-js": "^3.6.5",
+    "express": "^4.17.3",
     "js-cookie": "^3.0.1",
+    "serve-static": "^1.15.0",
     "vue": "^2.6.11",
     "vue-router": "^3.0.6",
     "vuelidate": "^0.7.7",
